--- a/index.html
+++ b/index.html
@@ -7,7 +7,52 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    
+    <aside id="searchCity">
+        <input id="cityName" type="text">
+        <button id="submit">Search</button>
+    </aside>
+
+    <main id="5-day-forecast">
+        <section id="forecast-1" class="forecast">
+            <h3 id="date-1"></h3>
+            <img id="icon-1">
+            <p id="temp-1"></p>
+            <p id="wind-1"></p>
+            <p id="humid-1"></p>
+        </section>
+
+        <section id="forecast-2" class="forecast">
+            <h3 id="date-2"></h3>
+            <img id="icon-2">
+            <p id="temp-2"></p>
+            <p id="wind-2"></p>
+            <p id="humid-2"></p>
+        </section>
+
+        <section id="forecast-3" class="forecast">
+            <h3 id="date-3"></h3>
+            <img id="icon-3">
+            <p id="temp-3"></p>
+            <p id="wind-3"></p>
+            <p id="humid-3"></p>
+        </section>
+
+        <section id="forecast-4" class="forecast">
+            <h3 id="date-4"></h3>
+            <img id="icon-4">
+            <p id="temp-4"></p>
+            <p id="wind-4"></p>
+            <p id="humid-4"></p>
+        </section>
+
+        <section id="forecast-5" class="forecast">
+            <h3 id="date-5"></h3>
+            <img id="icon-5">
+            <p id="temp-5"></p>
+            <p id="wind-5"></p>
+            <p id="humid-5"></p>
+        </section>
+    </main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
