clicking on city in search history displays weather

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     ></script>
 </head>
 <body>
-    <aside id="searchCity">
+    <form id="searchCity">
         <input id="cityName" type="text">
         <button id="submit">Search</button>
-        
-    </aside>
+    </form>
 
     <main id="5-day-forecast">
         <section id="forecast-1" class="forecast">
