added more styling

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <p id="humid-today"></p>
             </section>
 
+            <h2>5-Day Forecast:</h2>
             <section id="weekly-forecast">
                 <section id="forecast-1" class="forecast">
                     <h3 id="date-1"></h3>
